--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -8,7 +8,7 @@
         <version>3.4.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.joejoe012</groupId>
+    <groupId>com.company</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
@@ -29,7 +29,8 @@
     <properties>
         <java.version>21</java.version>
         <mybatis-plus.version>3.5.11</mybatis-plus.version>
-        <pagehelper.version>6.1.0</pagehelper.version>
+        <freemarker.version>2.3.31</freemarker.version>
+        <pagehelper-starter.version>2.1.0</pagehelper-starter.version>
         <hutool.version>5.8.37</hutool.version>
         <swagger.version>2.8.6</swagger.version>
     </properties>
@@ -49,7 +50,7 @@
             <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
             <version>${mybatis-plus.version}</version>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
             <version>${mybatis-plus.version}</version>
@@ -57,8 +58,8 @@
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.31</version>
-        </dependency>-->
+            <version>${freemarker.version}</version>
+        </dependency>
         <!--JDBC-->
         <dependency>
             <groupId>com.mysql</groupId>
@@ -68,8 +69,8 @@
         <!--分页-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>${pagehelper.version}</version>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>${pagehelper-starter.version}</version>
         </dependency>
         <!--swagger-->
         <dependency>
