--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   application:
-    name: demo-project
+    name: ApiProject-demo
   datasource:
     url: jdbc:mysql://localhost:3306/demo
     username: root
