update log config

--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -12,3 +12,6 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+logging:
+  config: classpath:log/logback-spring.xml
